[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vs-tools"
version = "0.1.0"
description = "Local analysis tools"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Joseph Lucas"}]
keywords = ["metabolomics", "EMR","causal inference", "genomics", "proteomics","electronic medical record"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools]
package-dir = {"" = "pythonTools"}
py-modules = [
  "vsEmrTools",
  "vsEncryption",
  "vsFeatures",
  "vsHighDimensionalData",
  "vsJavaScript",
  "vsMassSpecData",
  "vsMcpServer",
  "vsOutcomeTools",
  "vsPathways",
  "vsPosteriorDensities",
  "vsPrediction",
  "vsSparseFactorModel",
  "vsTableFormatting",
  "vsUtilityFunctions",
  "vsVisualizations",
]
